python/testData/highlighting/assignmentExpressionAsATarget.py
[x1 for <error descr="Assignment expression cannot be used as a target here">(x1 := 2)</error> in (1, 2, 3)]

for <error descr="Assignment expression cannot be used as a target here">(x1 := 2)</error> in (1, 2, 3):
    pass